log
Fri 17 Mar 2023 02:17:31 AM UTC: 
 tests:  0|7
total_score: 0/70
890e2a9
Fri 17 Mar 2023 02:18:44 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
4e278d1
Fri 17 Mar 2023 02:22:04 AM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:31:12: error: expected ‘(’ before ‘*’ token
   31 |         if *a[i] > *max
      |            ^
      |            (
exercises.c:31:12: error: invalid type argument of unary ‘*’ (have ‘int’)
   31 |         if *a[i] > *max
      |            ^~~~~
Compilation failed
4705207
Fri 17 Mar 2023 02:22:17 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:31:13: error: invalid type argument of unary ‘*’ (have ‘int’)
   31 |         if (*a[i] > *max)
      |             ^~~~~
exercises.c:32:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   32 |           *max = *a[i];
      |                  ^~~~~
Compilation failed
db6e080
Fri 17 Mar 2023 02:22:29 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:32:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   32 |           *max = *a[i];
      |                  ^~~~~
Compilation failed
df91efa
